--- a/createnewuser.html
+++ b/createnewuser.html
@@ -30,14 +30,12 @@
           </div>
           <div class="thirdedit">
             <label for="gender">Gender:</label>
-            <input type="radio" id="male" name="gender" /><label for="male"
-              >Male</label
-            >
-            <input type="radio" id="female" name="gender" /><label for="female"
-              >Female</label
-            ><input type="radio" id="trans" name="gender" /><label for="trans"
-              >Trans</label
-            >
+            <label for="male">Male:</label>
+            <input type="radio" id="male" name="gender" />
+            <label for="female">Female:</label>
+            <input type="radio" id="female" name="gender" />
+            <label for="trans">Trans:</label>
+            <input type="radio" id="trans" name="gender" />
           </div>
           <div class="button" type="submit">
             <link /> <a href="#">Create new account</a> <link />
